I have added the feature that underlines the nav according to the scroll.

--- a/src/assets/tailwind.css
+++ b/src/assets/tailwind.css
@@ -3,3 +3,9 @@
 @tailwind components;
 
 @tailwind utilities;
+
+@layer components {
+    /* .active {
+        @apply after:w-full after:opacity-100
+    } */
+}
